# beauty-c

./: CMakeLists.txt  README.md  main.cpp
curlHelper/: curly.cpp  curly.h  main.cpp
cxlogic/: Do.cpp  Do.h  Method.cpp  Method.h  Point.cpp
entity/: APIHelper.cpp  APIHelper.h  Author.cpp  Author.h  Entity.cpp  Entity.h  main.cpp
logic/: Node.cpp  Node.h  logic.cpp  logic.h
